# ProjektBarium

./: CMakeLists.txt  Makefile  README.md  a.out  build.sh  conanfile.txt  install_deps.sh  output  run_test.sh  run_tests.sh
.github/workflows/: build.yml
barium/: CMakeLists.txt  README.md  ast_structures.cpp  ast_structures.hpp  code_generator.cpp  code_generator.hpp  grammar.txt  main.cpp  main_with_gcc.cpp  parser.y  tokens.l  visitor.hpp  visitor_pprint.cpp  visitor_pprint.hpp
barium/ast/: ast_structures.cpp  ast_structures.hpp
barium/codegen/: code_generator.cpp  code_generator.hpp  extern_func.hpp
barium/driver/: driver.cpp
barium/parser_graph/: parser.gv  parser.output  parser.tab.cc  parser.tab.hh
barium/visitor/: visitor_pprint.cpp  visitor_pprint.hpp
logs/: test_array.txt  test_branch.txt  test_full_ir.txt  test_io.txt  test_loop.txt  test_shape_area.txt
src/: CMakeLists.txt  CodeGenContext.cpp  CodeGenContext.hpp  README.md  ast_structures.cpp  ast_structures.hpp  code_generator.cpp  code_generator.hpp  codegen_context.cpp  codegen_context.hpp  driver.cpp  driver.hpp  extern_func.cpp  extern_func.hpp  main.cpp  parser.y  temp.txt  tokens.l
src/AST/: ASTAssignment.hpp  ASTBinaryOp.hpp  ASTBlock.hpp  ASTDecimal.hpp  ASTExpr.hpp  ASTFraction.hpp  ASTFunctionCall.hpp  ASTIdent.hpp  ASTNode.hpp  ASTStmt.hpp  CMakeLists.txt  NumberExprAst.hpp
test_files/: test.bar  test_all_ir.bar  test_array.bar  test_branch.bar  test_io.bar  test_loop.bar  test_shape_area.bar
